CMAKE_MINIMUM_REQUIRED(VERSION 2.4.7 FATAL_ERROR)

PROJECT(MySQL-audit)

# Path for MySQL include directory
INCLUDE_DIRECTORIES("C:/Program Files/MySQL/MySQL Server 5.1/include/")

ADD_DEFINITIONS("-DHAVE_DLOPEN -DDBUG_OFF")

ADD_LIBRARY(MySQL-audit MODULE audit.cpp)

TARGET_LINK_LIBRARIES(MySQL-audit wsock32)
